create type operation_type as enum ('withdrawal', 'expenditure', 'receipt');

CREATE TABLE "card" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "number" varchar(16),
  "pincode" varchar(4),
  "account_id" INT
);

CREATE TABLE "card_account" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "number" varchar(20),
  "currency" varchar(3),
  "balance" int
);

CREATE TABLE "transfer" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "account_id" int,
  "operation_type" operation_type,
  "operation_name" VARCHAR,
  "completed_at" TIMESTAMP DEFAULT NOW(),
  "amount" int
);

ALTER TABLE "transfer" ADD FOREIGN KEY ("account_id") REFERENCES "card_account" ("id");

ALTER TABLE "card" ADD FOREIGN KEY ("account_id") REFERENCES "card_account" ("id");
